StringTable去重及intern方法相关